--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -1,28 +1,28 @@
-name: LHCI
-on: 
-  schedule:
-    - cron: "0 0 * * *" 
-jobs:
-  lhci:
-    name: Lighthouse
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: 16.x
-      - name: npm install, build
-        run: |
-          npm install
-      - name: run Lighthouse CI
-        run: |
-          npm install -g @lhci/cli@0.8.x
-          npm run lh
-      - name: commit new data
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: 'data/'
-          author_name: 'LHCI'
-          message: 'updating data'
-          push: true
+# name: LHCI
+# on: 
+#   schedule:
+#     - cron: "0 0 * * *" 
+# jobs:
+#   lhci:
+#     name: Lighthouse
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+#       - name: Use Node.js 16.x
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 16.x
+#       - name: npm install, build
+#         run: |
+#           npm install
+#       - name: run Lighthouse CI
+#         run: |
+#           npm install -g @lhci/cli@0.8.x
+#           npm run lh
+#       - name: commit new data
+#         uses: EndBug/add-and-commit@v9
+#         with:
+#           add: 'data/'
+#           author_name: 'LHCI'
+#           message: 'updating data'
+#           push: true
